# technology-data

./: .codespell.ignore  .gitignore  .gitignore.save  .pre-commit-config.yaml  .pre-commit-conifg.yaml  .readthedocs.yaml  .readthedocs.yml  .syncignore  CITATIONS.cff  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  REUSE.toml  Snakefile  compile_cost_assumptions.py  compile_cost_assumptions_new.py  compile_cost_assumptions_per.py  config.yaml  costs_2030.csv  costs_2035.csv  costs_2045.csv  environment.yaml  mkdocs.yaml  pyproject.toml  retrieve_data_from_dea.py  ruff.toml  tables_in_csv.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/instructions/: copilot-instructions.md
.github/workflows/: ci.yaml  release.yml
.reuse/: dep5
docs/: CLAUDE.md  Makefile  addnew.rst  class-diagram.puml  conf.py  contributing.md  copilot-context.md  data.csv  design.md  faq.md  index.md  index.rst  installation.md  installation.rst  introduction.md  models.md  parameter.csv  parameter.md  release-notes.md  release_notes.rst  requirements.txt  structure.rst  users.md
docs/api/: data_accessor.md  datapackage.md  dea_energy_storage_parser.md  manual_input_usa_parser.md  parameter.md  source.md  source_collection.md  sources.md  technologies.md  technology.md  technology_collection.md  utils.md
docs/api/commons/: commons.md  dateformatenum.md  fileextensionenum.md
docs/api/units/: customundefineduniterror.md  specialunitregistry.md
docs/assets/extensions/: dynamic_inspect.py
docs/assets/javascripts/: matjax.js  readthedocs.js
docs/assets/stylesheets/: extra.css
docs/contributing/: CODE_OF_CONDUCT.md  contributors.md  instructions.md
docs/examples/: dea_storage.md  dea_storage_v10.md  manual_input_usa.md  manual_input_usa_v0134.md
docs/home/: citing.md  contacts.md  faq.md  installation.md  license.md  release-notes.md  users.md
docs/user_guide/: class-diagram.puml  data_accessor.md  datapackage.md  dea_energy_storage_parser.md  design.md  manual_input_usa_parser.md  models.md  parameter.md  source.md  source_collection.md  technology.md  technology_collection.md
inputs/: .~lock.energy_transport_data_sheet_dec_2017.xlsx#  .~lock.technology_data_for_el_and_dh.xlsx#  .~lock.technology_data_for_el_and_dh_-_0009.xlsx#  EWG_costs.csv  Eurostat_inflation_rates.xlsx  Frauenhofer_energy_prices.csv  Fraunhofer_ISE_costs.csv  Fraunhofer_ISE_vehicles_costs.csv  atb_e_2019.parquet  atb_e_2022.parquet  costs_PyPSA.csv  data_sheets_for_commercial_freight_and_passenger_transport_0.xlsx  data_sheets_for_maritime_commercial_freight_and_passenger_transport.xlsx  data_sheets_for_renewable_fuels.xlsx  data_sheets_for_renewable_fuels_-_0003.xlsx  dea_-_all_technologies_Indonesia.xlsx  dea_data_sheets_en_-_viet_nam_technology_catalogue_final.xlsx  discount_rates_usa.csv  energy_transport_data_sheet_dec_2017.xlsx  energy_transport_datasheet.xlsx  fuel_costs_usa.csv  manual_input.csv  parzen-energy-storage-database.xlsx  pnnl-energy-storage-database.xlsx  prc_hicp_aind__custom_20097956_spreadsheet.xlsx  prc_hicp_aind__custom_9928419_spreadsheet.xlsx  prc_hicp_aind_page_spreadsheet.xlsx  technology_data_catalogue_for_energy_storage.xlsx  technology_data_for_carbon_capture_transport_storage.xlsx  technology_data_for_el_and_dh.xlsx  technology_data_for_el_and_dh_-_0009.xlsx  technology_data_for_industrial_process_heat.xlsx  technology_data_for_industrial_process_heat_0001.xlsx  technology_data_for_industrial_process_heat_0002.xlsx  technologydatafor_heating_installations_marts_2018.xlsx
inputs/US/: discount_rates_usa.csv  manual_input_usa.csv  production_tax_credits_usa.csv
latex_tables/: bib_transition.bib  table_costs.tex  table_fuels.tex  table_inputs.tex  tables_in_csv.py  tables_in_latex.aux  tables_in_latex.bbl  tables_in_latex.blg  tables_in_latex.out  tables_in_latex.py  tables_in_latex.spl  tables_in_latex.synctex  tables_in_latex.tex
outputs/: .~lock.costs_2020.csv#  .~lock.costs_2040.csv#  .~lock.costs_2050.csv#  costs_2020.csv  costs_2025.csv  costs_2030.csv  costs_2035.csv  costs_2040.csv  costs_2045.csv  costs_2050.csv  costs_2060.csv
outputs/US/: costs_2020.csv  costs_2025.csv  costs_2030.csv  costs_2035.csv  costs_2040.csv  costs_2045.csv  costs_2050.csv
scripts/: _helpers.py  compile_cost_assumptions.py  compile_cost_assumptions_BM.py  compile_cost_assumptions_nrel.py  compile_cost_assumptions_usa.py  compile_global_costs.py  convert_pdf_EWG_to_dataframe.py  convert_pdf_frauenhofer_to_dataframe.py  convert_pdf_fraunhofer_to_dataframe.py  retrieve_data_from_dea.py  tables_in_csv.py
src/technologydata/: __init__.py  datapackage.py  parameter.py  source.py  source_collection.py  technology.py  technology_collection.py
src/technologydata/constants/: __init__.py  energy_density.py
src/technologydata/parsers/: __init__.py  commons.py  data_accessor.py  data_parser_base.py
src/technologydata/technologies/: __init__.py  growth_models.py
src/technologydata/utils/: __init__.py  carriers.txt  commons.py  heating_values.txt  units.py
technologydata/: __init__.py  datapackage.py  parameter.py  source.py  source_collection.py  sources.py  technologies.py  technology.py  unit_value.py  utils.py
technologydata/datasources/example01/: sources.csv  technologies.csv
technologydata/datasources/example02/: sources.csv  (+1 more)
technologydata/utils/: __init__.py  commons.py  currencies.py
test/: conftest.py  test_adjust_functions.py  test_commons.py  test_compile_cost_assumptions.py  test_compile_cost_assumptions_nrel.py  test_compile_cost_assumptions_usa.py  test_currencies.py  test_datapackage.py  test_dea_energy_storage.py  test_dea_energy_storage_v10.py  test_growth_models.py  test_helpers.py  test_parameter.py  test_parser_commons.py  test_parser_data_accessor.py  test_source.py  test_source_collection.py  test_source_functions.py  test_source_loading.py  test_technology.py  test_technology_collection.py  test_units.py  test_utils.py  test_validate_datasets.py
test/test_data/: coal_test.csv
(+39 files in other folders)
