# SPDX-FileCopyrightText: technologydata contributors
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "technologydata"
dynamic = ["version"]
keywords = ["energy", "modelling", "techno-economics", "macroeconomics"] # TODO update
description = "Package for providing common data assumptions for energy system modelling on techno-economics and macro-economics."
readme = "README.md"
authors = [
    { name = "Contributors to technologydata", email = "johannes.hampp@openenergytransition.org" },
    { name = "Contributors to technologydata", email = "fabrizio.finozzi.business@gmail.com" },
]
classifiers=[
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "frozendict>=2.4.6",
    "hdx-python-country>=3.9.6",
    "mypy>=1.15.0",
    "pandas>=2.2.3",
    "pint>=0.24.4",
    "pydantic>=2.11.7",
    "pydeflate>=2.3.3",
    "requests>=2.32.3",
    "savepagenow>=1.3.0",
    "scipy>=1.16.1",
]

[project.urls]
Homepage = "https://github.com/open-energy-transition/technology-data"
Source = "https://github.com/open-energy-transition/technology-data"
BugTracker = "https://github.com/open-energy-transition/technology-data/issues"
Changelog = "https://github.com/open-energy-transition/technology-data/releases"

# https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-groups
# editable installation of package and non-packaged dependencies
[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "reuse>=5.0.2",
    "technologydata",
]

docs = [
    "cairosvg>=2.8.2",
    "gurobipy>=12.0.3",
    "mkdocs-argref-plugin>=0.5.0",
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-ezlinks-plugin>=0.1.14",
    "mkdocs-git-committers-plugin>=0.2.3",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mkdocs-video>=1.5.0",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.11",
    "openpyxl>=3.1.5",
    "pillow>=11.3.0",
    "python-calamine>=0.4.0",
    "tsam>=2.3.9",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = "test"
addopts = "--cov=technologydata --cov-report=term"
filterwarnings = [
    "ignore::RuntimeWarning",
    "ignore:numpy.ndarray size changed*:RuntimeWarning"
]

# Setuptools_scm settings
[tool.uv]
package = true
default-groups = ["dev", "docs"]

[tool.uv.sources]
technologydata = { workspace = true }

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.setuptools.packages.find]
where = ["src"]
include = ["technologydata"]

# code coverage settings
[tool.coverage.run]
source = [
    "src/technologydata",
]

# Static type checker settings
[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
show_error_code_links = true
disallow_any_generics = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "technologydata"
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateutil"
ignore_missing_imports = true

# Formatter and linter settings

[tool.ruff]
extend-include = ['*.ipynb']
exclude = ["docs/"]

[tool.ruff.lint]
select = [
    'F',   # pyflakes
    'E',   # pycodestyle: Error
    'W',   # pycodestyle: Warning
    'I',   # isort
    'D',   # pydocstyle
    'UP',  # pyupgrade
    'ANN', # flake-8 annotations
    'TID', # flake8-tidy-imports
    'NPY', # numpy
    'PD',  # pandas
    'RUF013', # ruff
]

ignore = [
    'ANN401', # Dynamically typed expressions are forbidden
    'E501', # line too long
    'D203', # 1 blank line required before class docstring
    'D212', # Multi-line docstring summary should start at the second line
    ]


[tool.ruff.lint.per-file-ignores]
"{test}/**"=[
    'ANN' # flake8-annotations
]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
